tests/fail/semantics/ownership_copy_nontrivial_not_implemented/main.kira
struct Mesh {
    let id: Int
}

function duplicate(mesh: copy Mesh) -> Int {
    return mesh.id
}

@Main
function main() {
    let mesh = Mesh { id: 4 }
    print(duplicate(copy mesh))
    return
}
